<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.helio.arduino.signal.SignalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/signal_type"
                    android:textColor="@color/signalAccent"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/waveGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/squareCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:checked="true"
                        android:text="@string/square_wave"
                        android:textColor="@color/deviceName"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/sineCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/sine_wave"
                        android:textColor="@color/deviceName"
                        android:textSize="14sp" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/frequency"
                    android:textColor="@color/signalAccent"
                    android:textSize="14sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/freqInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="12dp">

                    <EditText
                        android:id="@+id/freqField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:digits="0123456789"
                        android:hint="@string/enter_your_number"
                        android:inputType="numberDecimal"
                        android:maxLength="8"
                        android:minWidth="150dp"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/freqGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/hzCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/hz"
                        android:checked="true"
                        android:textColor="@color/deviceName"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/khzCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/khz"
                        android:textColor="@color/deviceName"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/mhzCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/mhz"
                        android:textColor="@color/deviceName"
                        android:textSize="14sp" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/generateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_orange_selector"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/generate"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <Button
                android:id="@+id/terminateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_orange_selector"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/terminate"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
