<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/meterField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_field_res"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="35sp" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/voltageButton"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:background="@drawable/green_selector"
                        android:padding="5dp"
                        android:text="@string/v"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/resistanceButton"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:layout_margin="24dp"
                        android:background="@drawable/red_selector"
                        android:padding="5dp"
                        android:text="@string/omega"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/currentButton"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:background="@drawable/blue_selector"
                        android:padding="5dp"
                        android:text="@string/a"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/sctButton"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:background="@drawable/blue_selector"
                        android:padding="5dp"
                        android:src="@drawable/access_point"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                    <View
                        android:id="@+id/sctStatus"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/gray_circle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/resetButton"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:background="@drawable/button_red_selector"
                        android:padding="5dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/reset"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp" />

                    <ImageButton
                        android:id="@+id/exportButton"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/button_export_selector"
                        android:src="@drawable/file_export_dark" />

                    <ImageButton
                        android:id="@+id/filesButton"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginLeft="16dp"
                        android:background="@color/colorBlue"
                        android:src="@drawable/file_document" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/refreshRateField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:hint="@string/refresh_rate"
                        android:inputType="number"
                        android:padding="5dp" />

                    <Button
                        android:id="@+id/setRateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/set_refrash_rate" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/blockView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayTr"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:padding="15dp"
            android:text="@string/wait_while_connection_was_established"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
