<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="80dp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="32dp"
                    app:cardElevation="2dp">

                    <com.github.mikephil.charting.charts.ScatterChart
                        android:id="@+id/chart1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/seekBar1" />

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center|top"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/captureButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/button_green_selector"
                            android:foreground="?attr/selectableItemBackground"
                            android:paddingBottom="10dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="10dp"
                            android:text="@string/capture"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/stopButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/button_red_selector"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center"
                            android:paddingBottom="10dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="10dp"
                            android:text="@string/stop"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/screenshotButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:background="@drawable/button_blue_selector"
                            android:foreground="?attr/selectableItemBackground"
                            android:paddingBottom="10dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="10dp"
                            android:text="@string/screenshot"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/clearButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|right"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/button_blue_selector"
                            android:foreground="?attr/selectableItemBackground"
                            android:paddingBottom="10dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="10dp"
                            android:text="@string/clear"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/galleryButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|right"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/button_blue_selector"
                            android:foreground="?attr/selectableItemBackground"
                            android:paddingBottom="10dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="10dp"
                            android:text="@string/gallery"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/blockView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayTr"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:padding="15dp"
            android:text="@string/wait_while_connection_was_established"
            android:textColor="@color/colorWhite"
            android:textSize="24sp" />

    </RelativeLayout>

</LinearLayout>
